syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "proto/api/v1/user.proto";

option go_package = "./protogen";


message Subscription {
  int64 id = 1;
  int64 user_id = 2;
  int64 country_id = 3;
  google.protobuf.Timestamp expiration_time = 4;
}

message SubscriptionRequest {
  int64 user_id = 1;
  int64 country_id = 2;
}

service SubscriptionService {
  rpc GetUserSubscriptions(UserID) returns (stream Subscription);
  rpc ActivateTrialSubscription(SubscriptionRequest) returns(Subscription);
  rpc ActivatePaidSubscription(SubscriptionRequest) returns(Subscription);
}